GNOME Bugzilla – Bug 786994
Passwords retrieved through sync do not get automatically filled.
Last modified: 2017-08-30 14:25:47 UTC
This is what I did: 1) I cleaned every password not stored by evolution/goa using seahorse. 2) Installed the master branch version of epiphany, signed into sync, and it retrieved my firefox passwords and bookmarks. 3) I tried logging onto bugzilla.gnome.org but it did not automatically fill in my information. 4) I deleted the entry using epiphany password manager and let epiphany save it again. After that, epiphany started automatically filling it in again.
Created attachment 358761 [details] [review] form-auth: Change type of target origin from SoupURI to char * soup_uri_new() appends a / to the target origin, thus causing the value passed to ephy_embed_form_auth_new() to be different from the one returned by ephy_embed_form_auth_get_target_origin().
Attachment 358761 [details] pushed as 5bf05e1 - form-auth: Change type of target origin from SoupURI to char *