form-auth: Change type of target origin from SoupURI to char *

soup_uri_new() appends a / to the target origin, thus causing the value
passed to ephy_embed_form_auth_new() to be different from the one
returned by ephy_embed_form_auth_get_target_origin().

https://bugzilla.gnome.org/show_bug.cgi?id=786994