embed/web-extension/ephy-embed-form-auth.h
@@ -37,7 +37,7 @@ EphyEmbedFormAuth *ephy_embed_form_auth_new                   (WebKitWebPage    
                                                                const char        *username);
 WebKitDOMNode     *ephy_embed_form_auth_get_username_node     (EphyEmbedFormAuth *form_auth);
 WebKitDOMNode     *ephy_embed_form_auth_get_password_node     (EphyEmbedFormAuth *form_auth);
-char              *ephy_embed_form_auth_get_target_origin     (EphyEmbedFormAuth *form_auth);
+const char        *ephy_embed_form_auth_get_target_origin     (EphyEmbedFormAuth *form_auth);
 SoupURI           *ephy_embed_form_auth_get_uri               (EphyEmbedFormAuth *form_auth);
 guint64            ephy_embed_form_auth_get_page_id           (EphyEmbedFormAuth *form_auth);
 const char        *ephy_embed_form_auth_get_username          (EphyEmbedFormAuth *form_auth);
